paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/function_specifiers_c8b/sample_005/target.compile.log
warning: unreachable statement
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/function_specifiers_c8b/sample_005/target.rs:20:5
   |
19 |     p(7);
   |     ---- any code following this expression is unreachable
20 |     return 3;
   |     ^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/function_specifiers_c8b/sample_005/target.rs:20:12
   |
16 | fn main() {
   |          - expected `()` because of default return type
...
20 |     return 3;
   |            ^ expected `()`, found integer

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.